# SpeciesTransport

./: CMakeLists.txt  Makefile  common_includes.c  main copy.cpp  main.cpp  main.cu  out.txt  out200.txt  output.txt  outsingle70.txt  run.sh  run_speciesTransport  seq100.txt  seq20.txt  seq200.txt  seq50.txt  test.txt  test.txt+  test.txt~  test.txtù  test2.txt
initialization/: init.h  initialization.cpp  initialization.cu
solve/: jacobi.cpp  solve.cpp  solve.cu  solve.h  test.cpp  tools.cpp  tools.cu  tools.h
stats/: out100.txt  out400.txt  out50.txt  out600.txt  outsingl70.txt  seqTime50.txt  sequentialtime50.txt
unitTests/: checkFillA.cu  checkFillB.cu  checkJacobiSolver.cu  computeRowOffsets.cu  main.cu  unitTest.h
write/: write.cpp  write.h
